feat: CRUD routes complete

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-poeple-practice",
+  "name": "acc1-express-people-practice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
